objects/Legal_Commitment_to_Opportunity_JUNC__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Name</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Legal Commitment to Opportunity JUNC</relationshipLabel>
        <relationshipName>Legal_Commitment_to_Opportunity_JUNC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <description>FTLA
PLMA
PSA
SA
SLMA</description>
        <label>Agreement Type</label>
        <picklist>
            <picklistValues>
                <fullName>FTLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTLA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Base_Legal_Agreement__c</fullName>
        <label>Base Legal Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>APPROVAL-AMENDMENT TO BASE AGR REQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASE AGREEMENT OK TO USE AS-IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEW BASE AGREEMENT REQUIRED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Commitment_Status__c</fullName>
        <label>Legal Commitment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Yet Reviewed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed - Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed - Non-Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Commitment__c</fullName>
        <label>Legal Commitment</label>
        <referenceTo>Legal_Commitment__c</referenceTo>
        <relationshipLabel>Legal Commitment to Opportunity JUNC</relationshipLabel>
        <relationshipName>Legal_Commitment_to_Opportunity_JUNC</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Non_Standard_PQ_Exhibit_Comments__c</fullName>
        <label>Non-Standard PQ/Exhibit Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Legal Commitment to Opportunity JUNC</relationshipLabel>
        <relationshipName>Legal_Commitment_to_Opportunity_JUNC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Special_Legal_Review_Required__c</fullName>
        <label>Special Legal Review Required</label>
        <type>TextArea</type>
    </fields>
    <label>Legal Commitment to Opportunity JUNC</label>
    <nameField>
        <label>Legal Commitment to Opportunity JUNC Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Commitment to Opportunity JUNC</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>